update sidebar seller

--- a/code/SELLER/register.html
+++ b/code/SELLER/register.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="../../assets/css/custom.css">
     <link rel="stylesheet" href="../../assets/css/navbar.css">
     <link rel="stylesheet" href="../../assets/plugins/@fortawesome/fontawesome-free/css/all.min.css">
-
-    <style>
-    </style>
 </head>
 
 <body>
@@ -371,7 +368,7 @@
                                                 </div>
                                                 <small>Pastikan nomor kamu aktif agar proses pendaftaran lebih cepat</small>
                                                 <div class="mt-3">
-                                                    <button type="button" class="btn btn-success next-button">Lanjut</button>
+                                                    <button type="button" class="btn btn-success f-10 next-button">Lanjut</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -409,11 +406,11 @@
                                             <div class="el-content">
                                                 <div class="mt-2">
                                                     <label class="m-0 f-10" for="">Alamat Lengkap</label>
-                                                    <input type="text" class="form-control" placeholder="jln..">
+                                                    <input type="text" class="form-control f-10" placeholder="jln..">
                                                 </div>
                                                 <div class="mt-2">
                                                     <label class="m-0 f-10" for="">Provinsi</label>
-                                                    <select name="" class="form-control" id="">
+                                                    <select name="" class="form-control f-10" id="">
                                                         <option value="">Pilih Provinsi</option>
                                                         <option value="">Aceh</option>
                                                         <option value="">Jawa Timur</option>
@@ -423,7 +420,7 @@
                                                 </div>
                                                 <div class="mt-2">
                                                     <label class="m-0 f-10" for="">Kabupaten</label>
-                                                    <select name="" class="form-control" id="">
+                                                    <select name="" class="form-control f-10" id="">
                                                         <option value="">Pilih Kabupaten</option>
                                                         <option value="">Surabaya</option>
                                                         <option value="">Sidoarjo</option>
@@ -433,7 +430,7 @@
                                                 </div>
                                                 <div class="mt-2">
                                                     <label class="m-0 f-10" for="">Kecamatan</label>
-                                                    <select name="" class="form-control" id="">
+                                                    <select name="" class="form-control f-10" id="">
                                                         <option value="">Pilih Kecamatan</option>
                                                         <option value="">Surabaya</option>
                                                         <option value="">Sidoarjo</option>
@@ -443,7 +440,7 @@
                                                 </div>
                                                 <div class="mt-2">
                                                     <label class="m-0 f-10" for="">Kode Pos</label>
-                                                    <select name="" class="form-control" id="">
+                                                    <select name="" class="form-control f-10" id="">
                                                         <option value="">Kode Pos</option>
                                                         <option value="">131432</option>
                                                         <option value="">234324</option>
@@ -459,8 +456,8 @@
                                                     </label>
                                                 </div>
                                                 <div class="mt-3">
-                                                    <button class="btn-white  f-10 h-30 fw-bold rounded-10">Kembali</button>
-                                                    <button class="btn btn-success  h-30 f-10">Selesai</button>
+                                                    <button class="btn-white f-10 uppercase fw-bold rounded-10 prev-button" type="button">Kembali</button>
+                                                    <button class="btn btn-success  f-10" type="submit">Selesai</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -474,6 +471,101 @@
         </div>
     </section>
 
+    <!-- footer -->
+    <footer class="text-center text-lg-start footer">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row p-4">
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col-4">
+                            <h4 class="footer-onlinemol-bold">Onlinemol</h4>
+                            <h6 class="footer-onlinemol"><a href="#">Tentang Onlinemol</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Karir</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Blog</a></h6>
+                        </div>
+                        <div class="col-4">
+                            <h4 class="footer-onlinemol-bold">Beli</h4>
+                            <h6 class="footer-onlinemol"><a href="#">Tagihan & Top Up</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Tukar Tambah Handphone</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Onlinemol COD</a></h6>
+                        </div>
+                        <div class="col-4">
+                            <h4 class="footer-onlinemol-bold">Bantuan dan Panduan</h4>
+                            <h6 class="footer-onlinemol"><a href="#">Onlinemol Care</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Syarat dan Ketentuan</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Kebijakan Privasi</a></h6>
+                        </div>
+                        <div class="col-4">
+                            <!-- spacer -->
+                        </div>
+                        <div class="col-4">
+                            <h4 class="footer-onlinemol-bold">Jual</h4>
+                            <h6 class="footer-onlinemol"><a href="#">Pusat Edukasi Seller</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Mitra Toppers</a></h6>
+                            <h6 class="footer-onlinemol"><a href="#">Daftar Official Store</a></h6>
+                        </div>
+                        <div class="col-4">
+                            <h4 class="footer-onlinemol-bold">Keamanan</h4>
+                            <img src="../../assets/WEB/IMAGE/IMAGE WEB81.jpg" width="100px">
+                        </div>
+                        <div class="col-4">
+                            <!-- spacer -->
+                        </div>
+                        <div class="col-4">
+                            <!-- spacer -->
+                        </div>
+                        <div class="col-4">
+                            <h4 class="footer-onlinemol-bold">Ikuti Kami</h4>
+                            <span class="social-icon text-muted">
+                                <a href="">
+                                    <img src="../../assets/WEB/ICON/ICON WEB84.svg" width="34px" alt="">
+                                </a>
+                                <a href="">
+                                    <img src="../../assets/WEB/ICON/ICON WEB104.svg" width="34px" alt="">
+                                </a>
+                                <a href="">
+                                    <img src="../../assets/WEB/ICON/ICON WEB105.svg" width="34px" alt="">
+                                </a>
+                                <a href="">
+                                    <img src="../../assets/WEB/ICON/ICON WEB101.svg" width="34px" alt="">
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <img src="../../assets/WEB/ICON/ICON WEB19.svg" class="mall-image">
+                    <br>
+                    <div class="row mt-3">
+                        <div class="col-6">
+                            <img src="../../assets/WEB/IMAGE/IMAGE WEB10.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-5">
+                            <img src="../../assets/WEB/IMAGE/IMAGE WEB5.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <p class="text-center mt-3 f-10 fc-text">
+                        @ 2009 - 2021, PT. Onlinemol
+                    </p>
+                    <div class="text-center">
+                        <div class="btn-switch">
+                            <button class="primary">
+                                Indonesia
+                            </button>
+                            <button class="off">
+                                English
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+    </footer>
+
     <script src="../../assets/js/jquery/dist/jquery.js"></script>
     <script src="../../assets/js/mdb.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -482,16 +574,24 @@
 
     <script>
         $(".next-button").click(function(){
-
             current_fs = $(this).parent().parent().parent().parent();
             current_content = $(this).parent().parent();
             next_fs = $(this).parent().parent().parent().parent().next();
-            console.log(current_content)
 
             $(current_content).removeClass('show');
             $(current_fs).addClass('active');
             $(next_fs).removeClass('disabled');
             $(next_fs).find('.el-content').addClass('show');
+        });
+        $('.prev-button').click(function(){
+            current_fs = $(this).parent().parent().parent().parent();
+            current_content = $(this).parent().parent();
+            prev_fs = $(this).parent().parent().parent().parent().prev();
+
+            $(current_content).removeClass('show');
+            $(current_fs).removeClass('active');
+            $(prev_fs).removeClass('disabled');
+            $(prev_fs).find('.el-content').addClass('show');
         });
     </script>
 </body>
