--- a/code/SELLER/diskusi.html
+++ b/code/SELLER/diskusi.html
@@ -399,198 +399,43 @@
         </div>
         <div class="content-container">
             <div class="card-container-seller">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div>
-                            <b class="f-16">Penting Hari ini</b>
-                            <p class="m-0 f-11 fc-text">Aktivitas yang perlu kamu pantau untuk jaga kepuasan pembeli</p>
-                        </div>
-                        <div class="mt-2">
-                            <div class="row">
-                                <div class="col-md-3 pr-0 mt-2">
-                                    <div class="card h-100">
-                                        <div class="shadows h-100">
-                                            <div class="p-3">
-                                                <div class="d-flex f-10 fc-text fw-bold">
-                                                    <span>Pesanan Baru</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Pesanan Baru"></span></a>
-                                                </div>
-                                                <h4 class="mt-2"><b>0</b></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 pr-0 mt-2">
-                                    <div class="card h-100">
-                                        <div class="shadows h-100">
-                                            <div class="p-3">
-                                                <div class="d-flex f-10 fc-text fw-bold">
-                                                    <span>Siap Dikirim</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Siap Dikirim"></span></a>
-                                                </div>
-                                                <h4 class="mt-2"><b>0</b></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 pr-0 mt-2">
-                                    <div class="card h-100">
-                                        <div class="shadows h-100">
-                                            <div class="p-3">
-                                                <div class="d-flex f-10 fc-text fw-bold">
-                                                    <span>Pesanan Dikomplain</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Pesanan Dikomplain"></span></a>
-                                                </div>
-                                                <h4 class="mt-2"><b>0</b></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 pr-0 mt-2">
-                                    <div class="card h-100">
-                                        <div class="shadows h-100">
-                                            <div class="p-3">
-                                                <div class="d-flex f-10 fc-text fw-bold">
-                                                    <span>Chat Baru</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Chat Baru"></span></a>
-                                                </div>
-                                                <h4 class="mt-2"><b>0</b></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 pr-0 mt-2">
-                                    <div class="card h-100">
-                                        <div class="shadows h-100">
-                                            <div class="p-3">
-                                                <div class="d-flex f-10 fc-text fw-bold">
-                                                    <span>Diskusi Baru</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Diskusi Baru"></span></a>
-                                                </div>
-                                                <h4 class="mt-2"><b>0</b></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 pr-0 mt-2">
-                                    <div class="card h-100">
-                                        <div class="shadows h-100">
-                                            <div class="p-3">
-                                                <div class="d-flex f-10 fc-text fw-bold">
-                                                    <span>Ulasan Baru</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ulasan Baru"></span></a>
-                                                </div>
-                                                <h4 class="mt-2"><b>0</b></h4>
-                                            </div>
-                                        </div>
-                                    </div>
+                <div class="d-flex">
+                    <b class="text-dark ml-2">Diskusi</b>
+                </div>
+                <div class="card mt-2">
+                    <div class="tabbable">
+                        <!-- Tabs navs -->
+                        <ul class="nav nav-tabs mb-3" id="tab-scroll" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <a class="nav-link active" id="tab-update" data-mdb-toggle="tab" href="#tab-update-content"
+                                    role="tab">Diskusi Saya</a>
+                            </li>
+                        </ul>
+                        <!-- Tabs navs -->
+                    </div>
+
+                    <!-- Tabs content -->
+                    <div class="tab-content" id="ex1-content">
+                        <div class="tab-pane fade show active" id="tab-update-content" role="tabpanel">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center f-10">
+                                    <b>Tampilkan</b>
+                                    <a href="javascript:;" class="p-2 ml-2 tab-label">Semua</a>
+                                    <a href="javascript:;" class="p-2 ml-2 tab-label">Belum Dibaca</a>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="mt-4">
-                            <b class="f-16">Analisis toko dan produkmu</b>
-                            <p class="m-0 f-11 fc-text">Update terakhir: <b>05 Juni 2021 16:00 WIB</b></p>
-                        </div>
-                        <div class="mt-2">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="card">
-                                        <div class="shadows">
-                                            <div class="p-3">
-                                                <b>Statistik tokomu saat ini</b>
-                                                <div class="row m-0 main-statistik">
-                                                    <div class="col-md-4 pl-0 mt-2 tab-statistik pointer" id="statistik-1">
-                                                        <div class="card active">
-                                                            <div class="shadows">
-                                                                <div class="p-3">
-                                                                    <div class="d-flex f-10 fc-text fw-bold">
-                                                                        <span>Pendapatan bersih baru</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Pendapatan bersih baru"></span></a>
-                                                                    </div>
-                                                                    <h4 class="mt-2"><b>Rp0</b></h4>
-                                                                    <b>0%</b> <span class="fc-text f-11">dari kemarin</span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4 pl-0 mt-2 tab-statistik pointer" id="statistik-2">
-                                                        <div class="card border-0">
-                                                            <div class="">
-                                                                <div class="p-3">
-                                                                    <div class="d-flex f-10 fc-text fw-bold">
-                                                                        <span>Produk dilihat</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Produk dilihat"></span></a>
-                                                                    </div>
-                                                                    <h4 class="mt-2"><b>Rp0</b></h4>
-                                                                    <b>0%</b> <span class="fc-text f-11">dari kemarin</span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4 pl-0 mt-2 tab-statistik pointer" id="statistik-3">
-                                                        <div class="card border-0">
-                                                            <div class="">
-                                                                <div class="p-3">
-                                                                    <div class="d-flex f-10 fc-text fw-bold">
-                                                                        <span>Produk terjual</span> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Produk terjual"></span></a>
-                                                                    </div>
-                                                                    <h4 class="mt-2"><b>Rp0</b></h4>
-                                                                    <b>0%</b> <span class="fc-text f-11">dari kemarin</span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <canvas id="myChart"></canvas>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="mt-3">
-                            <div class="card">
-                                <div class="shadows">
-                                    <div class="p-3 f-10">
-                                        <b>Performa toko harian</b> <a href=""><span class="fa fa-exclamation-circle ml-2" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Performa toko harian"></span></a>
-                                        <table class="table mt-3">
-                                            <thead>
-                                                <tr>
-                                                    <th>Jenis Performa</th>
-                                                    <th>Pencapaian</th>
-                                                    <th>Target</th>
-                                                    <th>Performa</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td><b>Kecepatan balas pesan</b></td>
-                                                    <td><b>1 menit</b></td>
-                                                    <td><span class="fc-text">< 40 menit</span></td>
-                                                    <td><span class="fc-text">Sangat memuaskan</span></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>Tingkat balas terbalas</b></td>
-                                                    <td><b>100%</b></td>
-                                                    <td><span class="fc-text">>-95%</span></td>
-                                                    <td><span class="fc-text">memuaskan</span></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>Kecepatan pengiriman reguler</b></td>
-                                                    <td><b>0jam</b></td>
-                                                    <td><span class="fc-text"> < 6 jam</span></td>
-                                                    <td><span class="fc-text">Sangat cepat</span></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>Kecepatan pengiriman instan</b></td>
-                                                    <td><b>0jam</b></td>
-                                                    <td><span class="fc-text">< 6 jam</span></td>
-                                                    <td><span class="fc-text">Sangat cepat</span></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                            <div class="mt-3">
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <img src="../../assets/WEB/ICON/ICON WEB35.svg" class="w-25" alt="">
+                                        <br>
+                                        <b class="f-10">Belum ada diskusi produk</b>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3"></div>
+                    <!-- Tabs content -->
                 </div>
             </div>
         </div>
@@ -601,73 +446,5 @@
     <script src="../../assets/js/bootstrap.min.js"></script>
     <script src="../../assets/js/navbar.js"></script>
     <script src="../../assets/js/sidebar.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-        function chartSeller(val = [], type = ''){
-            const labels = [
-                '00.00',
-                '01.00',
-                '02.00',
-                '03.00',
-                '04.00',
-                '05.00',
-                '06.00',
-                '07.00',
-                '08.00',
-                '09.00',
-            ];
-            let data = {
-                labels: labels,
-                datasets: [{
-                    label: 'Periode ini',
-                    backgroundColor: '#03AC0E',
-                    borderColor: '#03AC0E',
-                    data: val,
-                }]
-            };
-            const config = {
-                type: 'line',
-                data,
-                options: {}
-            };
-            var ctx = document.getElementById('myChart').getContext('2d');
-            getNewChart(ctx, config);
-        }
-
-        function getNewChart(canvas, config){
-            return new Chart(canvas, config);
-        }
-
-        function getDataStatistik(val = [], update = 'update'){
-            if(val === 'statistik-1'){
-                chartSeller([1, 4, 6,3,7,3,8], 'update');
-            }else if(val === 'statistik-2'){
-                chartSeller([1, 2, 6,3,7,3,8], 'update');
-            }else if(val === 'statistik-3'){
-                chartSeller([1, 2, 2,3,7,3,8], 'update');
-            }else{
-                chartSeller([1, 4, 6,3,7,3,8], '');
-            }
-        }
-
-        $('.tab-statistik').click(function(){
-            $(this).closest('.main-statistik').find('.card').each(function(){
-                $(this).find('.shadows').removeClass('shadows');
-                $(this).addClass('border-0');
-                $(this).removeClass('active');
-            });
-
-            const el = $(this).find('.card');
-            el.removeClass('border-0');
-            el.addClass('active');
-            el.children('div').addClass('shadows');
-            let getStat = $(this).attr('id');
-            getDataStatistik(getStat);
-        });
-        getDataStatistik();
-        
-        
-    </script>
 </body>
 </html>
